# dell-unisphere-mock-api

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  BACKLOG.md  CHANGELOG.md  CONVENTIONS.md  Makefile  README.md  cookie.txt  dev.problem  pool.py  pyproject.toml  requirements-test.txt  requirements.txt  test.results.0.txt  test.results.1.txt  test.results.2.txt  test.results.3.txt  test.results.4.txt  test.results.5.txt  test.results.6.txt  test.results.7.txt  test.results.8.txt  test.results.9.txt  warnings.md
.github/workflows/: test.yml
controllers/: job_controller.py
dell_unisphere_mock_api/: main.py
dell_unisphere_mock_api/controllers/: acl_user_controller.py  cifs_server_controller.py  filesystem_controller.py  job_controller.py  lun_controller.py  nas_server_controller.py  nfs_share_controller.py  pool_controller.py  quota_controller.py  session_controller.py  storage_resource_controller.py  system_info.py  tenant_controller.py
dell_unisphere_mock_api/core/: auth.py  config.py  middleware.py  query.py  response.py  response_models.py  (+3 more)
docs/: Authentication.md  BACKLOG.md  ExampleCookie.md  ImplementationBacklog.md  Tennant.md  Types.md  UnityProgGuideEndpoints.md  UnityRestReferenceGuideEndpoints.md  UpgradeSession.md  loginSessionInfo.md  test.http
models/: pool.py
routers/: job.py
schemas/: job.py  pool.py
tests/: conftest.py  test_acl_user.py  test_auth.py  test_cifs_server.py  test_controllers.py  test_disk.py  test_disk_group.py  test_host.py  test_job.py  test_lun.py  test_nfs_share.py  test_pool.py  test_pool_unit.py  test_quota.py  test_routes.py  test_session.py  test_system_info.py  test_tenant.py  test_tutorial_52.py  test_user.py
(+72 files in other folders)
