[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dell-unisphere-mock-api"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A FastAPI-based mock implementation of the Dell EMC Unisphere REST API"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    "pydantic>=2.5.2",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.2",
    "pytest-cov>=4.1.0",
]

[project.urls]
"Homepage" = "https://github.com/YOUR_USERNAME/dell-unisphere-mock-api"
"Bug Tracker" = "https://github.com/YOUR_USERNAME/dell-unisphere-mock-api/issues"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "strict"

[tool.coverage.run]
source = ["dell_unisphere_mock_api"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
